<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luis.corte.views.Produccion">

    <item
        android:id="@+id/action_CambiarActividad"
        android:orderInCategory="100"
        android:title="@string/action_cambiarActividad"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_cambiarPuestos"
        android:orderInCategory="100"
        android:title="@string/action_cambiarPuestos"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_configuracion"
        android:orderInCategory="100"
        android:title="@string/action_configuracion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_addActividades"
        android:title="@string/action_addActividad"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_addCajas"
        android:title="@string/action_addCajas"
        android:orderInCategory="100"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_addPuestos"
        android:orderInCategory="100"
        android:title="@string/action_addPuesto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exportar"
        android:orderInCategory="100"
        android:title="@string/action_exportar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_finzalir"
        android:orderInCategory="100"
        android:title="@string/action_finalizar"
        app:showAsAction="never" />
</menu>