<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luis.corte.views.MainActivity">
    <item
        android:id="@+id/action_configuracion"
        android:title="@string/action_configuracion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_addActividades"
        android:title="@string/action_addActividad"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_addCajas"
        android:title="@string/action_addCajas"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_addPuestos"
        android:title="@string/action_addPuesto"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exportar"
        android:title="@string/action_exportar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_importar"
        android:title="@string/action_importarTrabajadores"
        app:showAsAction="never" />

</menu>
